src/z80asm/z80asm2/t/30-hla/expected/break_01.txt
% z88dk-z80asm -v -dump-after-hla t/30-hla//input/break_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/30-hla/input/break_01.asm...
t/30-hla/input/break_01.asm:1:2: error: BREAK without WHILE or REPEAT
    %break
     ^
t/30-hla/input/break_01.asm:3:3: error: BREAK without WHILE or REPEAT
    	%break
    	 ^
t/30-hla/input/break_01.asm:6:9: error: Unexpected token after BREAK: extra
    	%break extra
    	       ^
